--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 git clone command it will downloading everything
 git pull commande it will download only changes what we have done
 this is html file
+ new lines are added
 
