--- a/index.html
+++ b/index.html
@@ -3,4 +3,5 @@ git pull commande it will download only changes what we have done
 this is html file
  new lines are added
 
-one more line added`
+this is devops class
+`
