one more message added

--- a/index.html
+++ b/index.html
@@ -2,4 +2,4 @@ git clone command it will downloading everything
 git pull commande it will download only changes what we have done
 this is html file
 this is devops class
-
+HI this is kamaraju
