another message added

--- a/index.html
+++ b/index.html
@@ -3,3 +3,4 @@ git pull commande it will download only changes what we have done
 this is html file
 this is devops class
 HI this is kamaraju
+i am on the way
